compiling_error.txt
/home/matheus/C++/atom/project_network_social/user_manipulation.cpp: In function ‘void get_options()’:
/home/matheus/C++/atom/project_network_social/user_manipulation.cpp:101:5: error: ‘show_user_menu’ was not declared in this scope
     show_user_menu();
     ^~~~~~~~~~~~~~
